--- a/src/header.css
+++ b/src/header.css
@@ -3,26 +3,17 @@
     justify-content: space-between;
 }
 .toast-msg-div {
+    display: flex;
     flex-direction: column;
     gap: 8px;
 }
-.model-footer {
-    display: flex;
-    gap: 8px;
-}
-.form-input {
-    border: 1px solid #ccc;         /* Light grey border */
-    padding: 10px;                  /* Some padding */
-    border-radius: 6px;             /* Rounded corners */
-    font-size: 16px;
-    width: 100%;                    /* Optional: makes it responsive */
-    outline: none;                  /* Removes default blue outline on focus */
-    box-sizing: border-box;
-    transition: border-color 0.2s;
-    margin-bottom: 10px;
-  }
-  
-  .form-input:focus {
-    border-color: #888;             /* Slightly darker border on focus */
-  }
 
+
+.like-form-div {
+    display: flex;
+    flex-direction: column;
+    background: #dedede;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
